# nonebot-plugin-literature

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: codecov.yml  release.yml
nonebot_plugin_literature/: __init__.py  config.py  model.py  utils.py
nonebot_plugin_literature/arxivreq/: __init__.py  client.py  exception.py
nonebot_plugin_literature/templates/: test.html
src/nonebot_plugin_prxiv/: utils.py
tests/: response.xml
